add Vercel Analytics

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,6 +19,8 @@ import { defaultFavicons } from '../constants/icon'
 import type { Favicon } from '../types/config'
 import { url, pathsEqual } from '../utils/url-utils'
 
+import Analytics from '@vercel/analytics/astro'
+
 interface Props {
   title?: string
   banner?: string
@@ -157,6 +159,7 @@ const bannerOffset =
 
 		<!-- increase the page height during page transition to prevent the scrolling animation from jumping -->
 		<div id="page-height-extend" class="hidden h-[300vh]"></div>
+		<Analytics />
 	</body>
 </html>
 
